--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
+    "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "react-uuid": "^2.0.0",
